<resources>
    <string name="app_name">HomeSmartHome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="TextView"></string>
    <string name="Auto">Auto</string>
    <string name="TextView2" />
    <string name="TextView3" />
    <string name="Cancel">Cancel</string>
    <string name="text1" />
    <string name="weather" />
</resources>